[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["Ramil-1 <pamau55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
say-hello = "first.scripts.say_hello:main"